fixed tags and input wrap in select

--- a/src/styles/dropdown.less
+++ b/src/styles/dropdown.less
@@ -121,7 +121,7 @@
     padding: 0;
     background: transparent;
     flex-grow: 1;
-    width: 60px;
+    width: 70px;
 
     &:focus {
       outline: none;
